<resources>
    <string name="app_name">Imuvo</string>
    <string name="facebook_app_id">1065468250226511</string>
    <string name="login_error">Fehler bei Login. Besteht eine Internetverbindung?</string>
    <string name="createUserText">Hier kannst du einen neuen Benutzer anlegen. Bitte lege einen Benutzernamen und ein Passwort fest.</string>
    <string name="userCreated">Nutzer wurde angelegt.</string>
    <string name="passwordWrong">Benutzerkonto existiert bereits oder Name oder Passwort sind falsch. Bitte versuche es erneut.</string>
    <string name="welcomeText">Wilkommen! Ich bin Imuvo. Wie ist dein Name?</string>
    <string name="learningWithImuvo">Lernen mit Imuvo</string>
    <string name="logOutQuestion">Willst du dich ausloggen?</string>
    <string name="no">Nein</string>
    <string name="hello">"Hallo"</string>
    <string name="menuWelcomeText">, mein Name ist Imuvo, ich freue mich heute mit Dir zu lernen!\nLass uns loslegen. Bitte wähle ein Symbol unter meinen Füßen!</string>
    <string name="readVocabSelection">Super! Du möchtest Vokabeln lesen. Unter der Sprechlase hast Du verschiedene Einstellmöglichkeiten bevor du mit dem Lesen beginnst.</string>
    <string name="queryVocabSelection">Du möchtest Vokabeln mit einer Abfrage üben. Unter der Sprechlase hast Du verschiedene Einstellmöglichkeiten bevor du mit dem Üben beginnst.</string>
    <string name="testVocabSelection">Du möchtest Vokabeln mit einem Vokabeltest üben. Unter der Sprechlase hast Du verschiedene Einstellmöglichkeiten bevor du mit dem Üben beginnst.</string>
    <string name="readAloudSelection">Du möchtest Dir Vokabeln anhören. Unter der Sprechlase hast Du verschiedene Einstellmöglichkeiten bevor du mit dem Vorlesen beginnst.</string>
    <string name="readVocab">Vokabeln lesen</string>
    <string name="askVocabs">Vokabeln abfragen</string>
    <string name="testVocabs">Vokabeln testen</string>
    <string name="readAloudVocabs">Vokabeln vorlesen</string>
    <string name="noVocabsForLection">Es gibt keine Vokabeln für diese Lektion.</string>
    <string name="reachedLastVocab">Letzte Vokabel erreicht!</string>
    <string name="noPreviousVocab">Es gibt keine vorherige Vokabel.</string>
    <string name="vocabWrong">Leider noch nicht ganz richtig.</string>
    <string name="solution">Lösung:</string>
    <string name="ok">OK</string>
    <string name="check">Prüfen</string>
    <string name="vocabTest">Vokabeltest</string>
    <string name="next">Nächste</string>
    <string name="selectTestType">Sehr gut! Du möchtest Vokabeln üben. Bitte entscheide dich zwischen einer Abfrage oder einem Vokabeltest</string>
    <string name="createNewUserExplanation">Hier kannst du einen neuen Benutzer anlegen. Bitte lege einen Benutzernamen und ein Passwort fest.</string>
    <string name="register">Registrieren</string>
    <string name="createUser">Nutzer anlegen</string>
    <string name="showSolution">Lösung anzeigen</string>
    <string name="tryAgain">Nochmal versuchen</string>
    <string name="name">Name</string>
    <string name="password">Passwort</string>
    <string name="start">Los Geht\'s!</string>
    <string name="read">Lesen</string>
    <string name="vocabs">Vokabeln</string>
    <string name="readAloud">Vorlesen</string>
    <string name="query">Abfrage</string>
    <string name="randomOrder">Zufällige Reihenfolge</string>
    <string name="previous">Vorherig</string>
    <string name="result">Ergebnis</string>
    <string name="askWrongVocabsAgain">Falsche Vokabeln erneut abfragen</string>
    <string name="share">Ergebnis teilen</string>
    <string name="furtherQuery">Weitere Abfrage</string>
    <string name="test">Test</string>
    <string name="manage_lections">Lektionen verwalten</string>
    <string name="register_user">Nutzer registrieren</string>
    <string name="import_lection">Lektionen importieren</string>
    <string name="shareResultSubject">Mein Ergebnis mit dem Vokabeltrainer Imuvo!</string>
    <string name="shareMessageResultPart1">"Schau mal! Ich habe mit dem Imuvo Vokabeltrainer "</string>
    <string name="shareMessageResultPart2">" richtige Vokabeln erreicht. Probiers doch auch einmal!"</string>
    <string name="shareWith">Teilen mit</string>
    <string name="dictionary">Lexikon</string>
    <string name="pageLoading">Seite wird geladen &#8230;</string>
    <string name="dictionaryURL">https://pocket.dict.cc/</string>
    <string name="lection">Lektion</string>
    <string name="lectionWithBlank">Lektion </string>
    <string name="notificationTicker">Heute schon Vokabeln gelernt?!</string>
    <string name="notificationTitle">Schon gelernt?</string>
    <string name="notificationContent">Klicke hier um direkt zu deinem Vokabeltrainer zu gelangen und jetzt deine Vokabeln abzufragen!</string>
    <string name="noVocabsImported">Es konnten keine Vokabeln oder Lektionen importiert werden oder diese sind bereits vorhanden.</string>
    <string name="importResult">Es wurden $lections Lektionen und $vocabs Vokabeln importiert.</string>
    <string name="noLectionsAvailable">Keine Lektionen vorhanden. Bitte den Datenimport nutzen.</string>
    <string name="skip">Überspringen</string>
    <string name="english">Englisch</string>
    <string name="minus">-</string>
    <string name="german">Deutsch</string>
    <string name="selectLection">Lektionen auswählen</string>
    <string name="yes">Ja</string>
    <string name="correctColon">"Richtig: "</string>
    <string name="wrongColon">"Falsch: "</string>
    <string name="duration">"Dauer: "</string>
    <string name="spaceMinutes">" min"</string>
</resources>
