<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_log_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.sco.imuvo.Activities.Login">

    <com.example.sco.imuvo.CustomViews.TextViewJokerman
        android:text="@string/learningWithImuvo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/welcomeText"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2"
        android:layout_marginBottom="10dp" />


    <com.example.sco.imuvo.CustomViews.TextViewITCKRIST
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:id="@+id/bubbleTextLogIn"
        android:background="@drawable/speechbubblebottom3" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:src="@drawable/animal"
        android:id="@+id/imageView3"
        android:layout_marginBottom="20dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/rectanglerounded"
            android:id="@+id/imageView4" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <com.example.sco.imuvo.CustomViews.EditTextITCKRIST
                android:layout_width="200dp"
                android:layout_height="0dp"
                android:inputType="text"
                android:hint="@string/name"
                android:ems="10"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:id="@+id/name"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rectangleroundedvocabs"/>

            <com.example.sco.imuvo.CustomViews.EditTextITCKRIST
                android:layout_height="0dp"
                android:inputType="textVisiblePassword"
                android:layout_gravity="center"
                android:hint="@string/password"
                android:ems="10"
                android:id="@+id/password"
                android:textAlignment="center"
                android:layout_weight="1"
                android:background="@drawable/rectangleroundedvocabs"
                android:layout_width="200dp" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/facebook_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.85" />
        </LinearLayout>

    </RelativeLayout>


    <com.example.sco.imuvo.CustomViews.ButtonJokerman
        android:text="@string/start"
        android:layout_height="0dp"
        android:id="@+id/start"
        android:layout_weight="3"
        android:onClick="onClickStart"
        android:layout_gravity="center"
        android:layout_marginTop="29dp"
        android:layout_width="200dp" />

</LinearLayout>
