<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_test_selection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sco.imuvo.Activities.VocabularyTestSelection">


    <com.example.sco.imuvo.CustomViews.TextViewJokerman
            android:text="@string/askVocabs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/headline"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="25sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

    <ImageView
            android:layout_width="50dp"
            android:src="@drawable/animal"
            android:id="@+id/imageView"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_below="@id/headline"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.example.sco.imuvo.CustomViews.TextViewITCKRIST
                android:text=""
                android:layout_width="match_parent"
                android:layout_below="@+id/imageView"
                android:layout_marginTop="20dp"
                android:id="@+id/speechbubble"
                android:textSize="15sp"
                android:textColor="@color/textcolorinbubble"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:background="@drawable/speechbubbletop"
                android:layout_weight="4"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="25dp"
                android:layout_weight="4">

                <com.example.sco.imuvo.CustomViews.ButtonJokerman
                    android:text="@string/query"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonAsking"
                    android:layout_weight="1"
                    android:layout_marginRight="40dp"
                    style="@style/menu_button."
                    android:textColor="@color/colorMenuTextMiddle"
                    android:onClick="onClickStartAsking"/>

                <com.example.sco.imuvo.CustomViews.ButtonJokerman
                    android:text="@string/test"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonTest"
                    android:layout_weight="1"
                    style="@style/menu_button."
                    android:textColor="@color/colorMenuTextRight"
                    android:onClick="onClickStartTest"/>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2" />


        </LinearLayout>


</RelativeLayout>
